wrote postgres layer; done all manual tests of service; only readme left to do (and maybe docker image);
