# docs/swagger.json
@@ -7,6 +7,32 @@
     },
     "paths": {
         "/api/records/": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "records-controller"
+                ],
+                "summary": "Получение записей пользователя",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.GetAllRecordsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.BadRequestResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "consumes": [
                     "application/json",
@@ -84,7 +110,7 @@
                 }
             }
         },
-        "/api/users/records/{user_id}": {
+        "/api/user/{user_id}/records": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -115,7 +141,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.GetRecordResponse"
+                            "$ref": "#/definitions/model.BadRequestResponse"
                         }
                     }
                 }
@@ -151,6 +177,26 @@
                 },
                 "user": {
                     "type": "string"
+                }
+            }
+        },
+        "model.GetAllRecordsResponse": {
+            "type": "object",
+            "properties": {
+                "records_stored": {
+                    "type": "integer"
+                },
+                "users": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/definitions/model.UsersRecord"
+                        }
+                    }
+                },
+                "users_registered": {
+                    "type": "integer"
                 }
             }
         },
