# internal/controller/http/handlers.go
@@ -21,12 +21,12 @@ func (srv *Controller) HandleCreateRecord(ctx *fiber.Ctx) error {
 	req := new(model.CreateRecordRequest)
 	if err := ctx.BodyParser(req); err != nil {
 		srv.log.Error("got error while handling request", zap.Error(err))
-		return srv.handleError(ctx, err)
+		return srv.handleError(ctx, "error while parsing request", err)
 	}
 	srv.log.Debug("handled request", zap.String("user", req.User), zap.String("msg_type", req.MsgType))
 	resp, err := srv.srv.CreateRecord(ctx.UserContext(), req)
 	if err != nil {
-		return srv.handleError(ctx, err)
+		return srv.handleError(ctx, "error while creating record", err)
 	}
 	ctx.Status(http.StatusCreated)
 	return ctx.JSON(resp)
@@ -46,7 +46,7 @@ func (srv *Controller) HandleGetRecord(ctx *fiber.Ctx) error {
 	id := ctx.Params("id")
 	resp, err := srv.srv.GetRecord(ctx.UserContext(), id)
 	if err != nil {
-		return srv.handleError(ctx, err)
+		return srv.handleError(ctx, "error while getting record", err)
 	}
 	return ctx.JSON(resp)
 }
@@ -59,21 +59,30 @@ func (srv *Controller) HandleGetRecord(ctx *fiber.Ctx) error {
 //	@Produce	json
 //	@Param		user_id	path		string							true	"user identifier"
 //	@Success	200		{object}	model.GetUserRecordsResponse	"OK
-//	@Failure	400		{object}	model.GetRecordResponse			"Bad Request"
-//	@Router		/api/users/records/{user_id} [get]
+//	@Failure	400		{object}	model.BadRequestResponse		"Bad Request"
+//	@Router		/api/user/{user_id}/records [get]
 func (srv *Controller) HandleGetUserRecords(ctx *fiber.Ctx) error {
 	user := ctx.Params("user")
 	resp, err := srv.srv.GetUser(ctx.UserContext(), user)
 	if err != nil {
-		return srv.handleError(ctx, err)
+		return srv.handleError(ctx, "error while getting user profile", err)
 	}
 	return ctx.JSON(resp)
 }
 
+// HandleGetAllRecords returns all records.
+//
+//	@Tags		records-controller
+//	@Summary	Получение записей пользователя
+//	@Accept		json
+//	@Produce	json
+//	@Success	200	{object}	model.GetAllRecordsResponse	"OK
+//	@Failure	400	{object}	model.BadRequestResponse	"Bad Request"
+//	@Router		/api/records/ [get]
 func (srv *Controller) HandleGetAllRecords(ctx *fiber.Ctx) error {
 	resp, err := srv.srv.GetRecords(ctx.UserContext())
 	if err != nil {
-		return srv.handleError(ctx, err)
+		return srv.handleError(ctx, "error while getting records", err)
 	}
 	return ctx.JSON(resp)
 }
